Add API for favoriting products
